feat: add graphs

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -98,7 +98,7 @@
     "    \"medium\": 1500 * KW_TO_MW,\n",
     "    \"high\": 2000 * KW_TO_MW,\n",
     "}\n",
-    "infrastructure_costs_gbp = {\n",
+    "wind_infrastructure_costs_gbp = {\n",
     "    \"low\": 56_000_000,\n",
     "    \"medium\": 64_300_000,\n",
     "    \"high\": 74_100_000,\n",
@@ -235,6 +235,10 @@
     "BESS_LINK_COSTS = Costs(\n",
     "    capital_cost=bess_capital_cost_power,  # £ per MW per year\n",
     "    marginal_cost=bess_marginal_cost_links,  # £ per MWh_elec\n",
+    ")\n",
+    "TOTAL_ANNUITISED_INFRASTRUCTURE_COSTS = (\n",
+    "    (wind_infrastructure_costs_gbp[cost_scenario] * wind_discount_rate) / (1 - (1 + wind_discount_rate) ** -wind_lifetime_years)\n",
+    "    + ((gas_infrastructure_costs_gbp[gas_reference_model][cost_scenario] * gas_discount_rate) / (1 - (1 + gas_discount_rate) ** -gas_lifetime_years))\n",
     ")"
    ]
   },
@@ -272,16 +276,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "299c37fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_profile_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f768fe10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wind_profile_df = wind_data[\"profile\"].to_dataframe()\n",
-    "wind_profile_df.reset_index(inplace=True)\n",
+    "wind_profile_df = wind_data[\"profile\"].to_dataframe().reset_index()\n",
     "\n",
-    "wind_availability_list = wind_profile_df[wind_profile_df[\"bus\"] == \"GB2 0\"][\n",
-    "    \"profile\"\n",
-    "].values"
+    "wind_availability_list = wind_profile_df[wind_profile_df[\"bus\"] == \"GB2 0\"][\"profile\"].to_numpy()"
    ]
   },
   {
@@ -309,10 +320,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MODEL_TIME_FREQUENCY = pd.Timedelta(\"1h\")  # Time frequency for the model\n",
     "def gen_model(data_centre_load_mw: float):\n",
     "    # Define simulation period: a full year, hourly\n",
     "    snapshots = pd.date_range(\n",
-    "        start=\"2019-01-01 00:00\", end=\"2019-12-31 23:00\", freq=\"h\"\n",
+    "        start=\"2019-01-01 00:00\", end=\"2019-12-31 23:00\", freq=MODEL_TIME_FREQUENCY\n",
     "    )\n",
     "    n = pypsa.Network(snapshots=snapshots)\n",
     "\n",
@@ -616,11 +628,12 @@
    "outputs": [],
    "source": [
     "asset_expenditures = {load: get_asset_expenditure(n) for load, n in networks.items()}\n",
-    "asset_expenditures_df = pd.DataFrame(\n",
-    "    asset_expenditures\n",
-    ").T  # Transpose so loads are rows\n",
-    "asset_expenditures_df.index.name = \"data_centre_load_MW\"\n",
-    "asset_expenditures_df.reset_index(inplace=True)\n",
+    "asset_expenditures_df = (\n",
+    "    pd.DataFrame(asset_expenditures).T\n",
+    "    .assign(infrastructure=TOTAL_ANNUITISED_INFRASTRUCTURE_COSTS)\n",
+    ")\n",
+    "asset_expenditures_df[\"total\"] = asset_expenditures_df.sum(axis=1)\n",
+    "asset_expenditures_df = asset_expenditures_df.reset_index(names=\"data_centre_load_MW\")\n",
     "asset_expenditures_df"
    ]
   },
@@ -725,6 +738,185 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "795f1383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asset_energy_mwh_per_day = asset_power.groupby(pd.Grouper(freq=\"D\")).apply(lambda x: x.abs().sum().mul(\n",
+    "    MODEL_TIME_FREQUENCY.total_seconds() / 3600\n",
+    "))  # Convert power to energy (MWh)\n",
+    "asset_energy_mwh_per_month = asset_power.groupby(pd.Grouper(freq=\"M\")).apply(lambda x: x.abs().sum().mul(\n",
+    "    MODEL_TIME_FREQUENCY.total_seconds() / 3600\n",
+    "))  # Convert power to energy (MWh)\n",
+    "asset_energy_mwh_per_day.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55754e05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For each time period in the day, create a stacked bar chart showing the amount of energy used from each of the generators to meet the data centre load\n",
+    "fig = px.bar(\n",
+    "    data_frame=asset_energy_mwh_per_day,\n",
+    "    x=asset_energy_mwh_per_day.index,\n",
+    "    y=list(set(asset_energy_mwh_per_day.columns.to_list()) - {\"dc_load\"}),\n",
+    "    title=\"Energy Used from Each Generator to Meet Data Centre Load on Each Day of the Year\",\n",
+    "    labels={\"value\": \"Power (MW)\", \"variable\": \"Generator\"},\n",
+    "    template=\"plotly_white\",\n",
+    "    color_discrete_map={\n",
+    "        \"offshore_wind_farm\": \"lightgreen\",\n",
+    "        \"gas_turbine\": \"darkgrey\",\n",
+    "        \"bess\": \"orange\"\n",
+    "    }\n",
+    ")\n",
+    "# Add a line for the data centre load\n",
+    "fig.add_scatter(\n",
+    "    x=asset_energy_mwh_per_day.index,\n",
+    "    y=asset_energy_mwh_per_day[\"dc_load\"],\n",
+    "    mode=\"lines\",\n",
+    "    name=\"Data Centre Load\",\n",
+    "    line=dict(color=\"black\", width=2),\n",
+    ")\n",
+    "fig.add_layout_image(\n",
+    "    dict(\n",
+    "        source=\"https://centrefornetzero.org/static/media/logo.7e2e2e2e.svg\",  # SVG logo from their website\n",
+    "        xref=\"paper\", yref=\"paper\",\n",
+    "        x=1, y=1,  # Top-right corner\n",
+    "        sizex=0.2, sizey=0.2,\n",
+    "        xanchor=\"right\", yanchor=\"top\",\n",
+    "        layer=\"above\"\n",
+    "    )\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f68381ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asset_energy_mwh_per_month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60eeaa07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add percentage columns for each generator\n",
+    "for col in [\"offshore_wind_farm\", \"gas_turbine\", \"bess\"]:\n",
+    "    asset_energy_mwh_per_month[f\"{col}_pct\"] = (\n",
+    "        asset_energy_mwh_per_month[col] / asset_energy_mwh_per_month[\"dc_load\"] * 100\n",
+    "    ).round(1).astype(str) + \"%\"\n",
+    "\n",
+    "# Melt the DataFrame for easier plotting with text labels\n",
+    "melted = asset_energy_mwh_per_month.reset_index().melt(\n",
+    "    id_vars=[\"snapshot\"],\n",
+    "    value_vars=[\"offshore_wind_farm\", \"gas_turbine\", \"bess\"],\n",
+    "    var_name=\"Generator\",\n",
+    "    value_name=\"Energy (MWh)\",\n",
+    ")\n",
+    "# Add percentage labels\n",
+    "melted[\"Percentage\"] = [\n",
+    "    asset_energy_mwh_per_month.loc[row[\"snapshot\"], f\"{row['Generator']}_pct\"]\n",
+    "    for _, row in melted.iterrows()\n",
+    "]\n",
+    "\n",
+    "fig = px.bar(\n",
+    "    melted,\n",
+    "    x=\"snapshot\",\n",
+    "    y=\"Energy (MWh)\",\n",
+    "    color=\"Generator\",\n",
+    "    title=\"Energy Used from Each Generator to Meet Data Centre Load on Each Month of the Year\",\n",
+    "    labels={\"snapshot\": \"Month\"},\n",
+    "    template=\"plotly_white\",\n",
+    "    color_discrete_map={\n",
+    "        \"offshore_wind_farm\": \"lightgreen\",\n",
+    "        \"gas_turbine\": \"darkgrey\",\n",
+    "        \"bess\": \"orange\"\n",
+    "    },\n",
+    "    text=\"Percentage\"\n",
+    ")\n",
+    "# Add a line for the data centre load\n",
+    "fig.add_scatter(\n",
+    "    x=asset_energy_mwh_per_month.index,\n",
+    "    y=asset_energy_mwh_per_month[\"dc_load\"],\n",
+    "    mode=\"lines\",\n",
+    "    name=\"Data Centre Load\",\n",
+    "    line=dict(color=\"black\", width=2),\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0968959b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get optimised powers for each asset\n",
+    "wind_opt_power = n.generators.loc[\"offshore_wind_farm\", \"p_nom_opt\"]\n",
+    "gas_opt_power = n.generators.loc[\"gas_turbine\", \"p_nom_opt\"]\n",
+    "bess_input_power = n.links.loc[\"bess_charger\", \"p_nom_opt\"]\n",
+    "bess_output_power = n.links.loc[\"bess_discharger\", \"p_nom_opt\"]\n",
+    "bess_avg_power = (bess_input_power + bess_output_power) / 2\n",
+    "bess_energy_capacity = n.stores.loc[\"bess_storage\", \"e_nom_opt\"]\n",
+    "\n",
+    "# Calculate percentages of DC load\n",
+    "wind_pct = wind_opt_power / DATA_CENTRE_LOAD_MW * 100\n",
+    "gas_pct = gas_opt_power / DATA_CENTRE_LOAD_MW * 100\n",
+    "bess_pct = bess_avg_power / DATA_CENTRE_LOAD_MW * 100\n",
+    "\n",
+    "percentages = [wind_pct, gas_pct, bess_pct]\n",
+    "labels = [\n",
+    "    \"<b>[Offshore Wind]</b><br><i>Power:</i> {:.1f} MW<br><i>({:.1f}%)</i>\".format(wind_opt_power, wind_pct),\n",
+    "    \"<b>[Gas Turbine]</b><br><i>Power:</i> {:.1f} MW<br><i>({:.1f}%)</i>\".format(gas_opt_power, gas_pct),\n",
+    "    \"<b>[BESS]</b><br><i>Avg Power (Import/Export):</i> {:.1f} MW<br><i>Energy:</i> {:.1f} MWh<br><i>({:.1f}%)</i>\".format(bess_avg_power, bess_energy_capacity, bess_pct)\n",
+    "]\n",
+    "\n",
+    "fig = px.bar(\n",
+    "    x=percentages,\n",
+    "    y=[\"Data Centre Load\"] * 3,\n",
+    "    orientation=\"h\",\n",
+    "    text=labels,\n",
+    "    color=[\"offshore_wind_farm\", \"gas_turbine\", \"bess\"],\n",
+    "    color_discrete_map={\n",
+    "        \"offshore_wind_farm\": \"lightgreen\",\n",
+    "        \"gas_turbine\": \"darkgrey\",\n",
+    "        \"bess\": \"orange\"\n",
+    "    },\n",
+    "    title=\"Optimised Microgrid Generation Powers as Percentage of Data Centre Load<br><i>(Assuming 115 MW DC Load)</i>\",\n",
+    "    labels={\"x\": \"Percentage of DC Load (%)\", \"y\": \"\"},\n",
+    ")\n",
+    "\n",
+    "# Add black outline to each bar\n",
+    "for trace in fig.data:\n",
+    "    trace.marker.line.width = 2\n",
+    "    trace.marker.line.color = \"black\"\n",
+    "\n",
+    "fig.update_traces(texttemplate=\"%{text}\", textposition=\"inside\")\n",
+    "fig.update_layout(\n",
+    "    barmode=\"stack\",\n",
+    "    xaxis_title=\"Percentage of DC Load (%)\",\n",
+    "    yaxis_title=\"\",\n",
+    "    template=\"plotly_white\",\n",
+    "    showlegend=False,\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "130d8f05",
    "metadata": {},
    "outputs": [],
@@ -768,10 +960,11 @@
     ")\n",
     "NUCLEAR_PPA_COST_PER_MWH = 133  # 92.5 £2012/MWh in todays money\n",
     "\n",
+    "cost_difference_percentages = {}\n",
     "for load in DC_LOADS:\n",
     "    n = networks[load]\n",
     "    print(f\"Data Centre Load: {load} MW\")\n",
-    "    cost_of_running_microgrid_per_year = n.model.objective.value\n",
+    "    cost_of_running_microgrid_per_year = n.model.objective.value + TOTAL_ANNUITISED_INFRASTRUCTURE_COSTS\n",
     "    cost_of_running_with_nuclear_ppa_per_year = (\n",
     "        load\n",
     "        * HOURS_PER_YEAR\n",
@@ -789,7 +982,42 @@
     "        (cost_of_running_microgrid_per_year - cost_of_running_with_nuclear_ppa_per_year)\n",
     "        / cost_of_running_with_nuclear_ppa_per_year\n",
     "    ) * 100\n",
-    "    print(f\"Percentage difference in costs: {cost_difference_percentage:.2f}%\\n\")"
+    "    print(f\"Percentage difference in costs: {cost_difference_percentage:.2f}%\\n\")\n",
+    "    cost_difference_percentages[load] = cost_difference_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0397f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a DataFrame for cost differences\n",
+    "cost_difference_df = pd.DataFrame.from_dict(\n",
+    "    cost_difference_percentages, orient=\"index\", columns=[\"Cost Difference (%)\"]\n",
+    ").reset_index(names=\"Data Centre Load (MW)\")\n",
+    "\n",
+    "# Prepare data for extrapolation\n",
+    "X = cost_difference_df[\"Data Centre Load (MW)\"].to_numpy().reshape(-1, 1)\n",
+    "y = cost_difference_df[\"Cost Difference (%)\"].to_numpy()\n",
+    "\n",
+    "# Plot actual data and extrapolation\n",
+    "fig = px.line(\n",
+    "    cost_difference_df,\n",
+    "    x=\"Data Centre Load (MW)\",\n",
+    "    y=\"Cost Difference (%)\",\n",
+    "    title=\"Cost Difference of Microgrid Scenario vs Nuclear PPA by Data Centre Load\",\n",
+    "    labels={\"Data Centre Load (MW)\": \"Data Centre Load (MW)\", \"Cost Difference (%)\": \"Cost Difference (%)\"},\n",
+    "    template=\"plotly_white\",\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    xaxis_title=\"Data Centre Load (MW)\",\n",
+    "    yaxis_title=\"Cost Difference (%)\",\n",
+    "    showlegend=True,\n",
+    ")\n",
+    "fig.show()"
    ]
   },
   {
@@ -833,7 +1061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
