feat: add more stuff

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -276,16 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299c37fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wind_profile_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f768fe10",
    "metadata": {},
    "outputs": [],
@@ -550,7 +540,7 @@
    "outputs": [],
    "source": [
     "networks = {}\n",
-    "DC_LOADS = [10, 40, 100, 500]  # Different data centre load scenarios in MW\n",
+    "DC_LOADS = [10, 40, 100, 115, 500]  # Different data centre load scenarios in MW\n",
     "\n",
     "for i, dc_load_value in enumerate(DC_LOADS):\n",
     "    n = gen_model(data_centre_load_mw=dc_load_value)\n",
@@ -955,12 +945,14 @@
    "outputs": [],
    "source": [
     "HOURS_PER_YEAR = 8760  # Total hours in a year\n",
-    "CARBON_FREE_NUCLEAR_PPA_PREMIUM = (\n",
-    "    10  # £/MWh, assumed premium for carbon-free nuclear PPA\n",
-    ")\n",
     "NUCLEAR_PPA_COST_PER_MWH = 133  # 92.5 £2012/MWh in todays money\n",
+    "CARBON_FREE_NUCLEAR_PPA_PREMIUM = (\n",
+    "    NUCLEAR_PPA_COST_PER_MWH*0  # £/MWh, assumed premium for carbon-free nuclear PPA assuming 10% premium\n",
+    ")\n",
     "\n",
     "cost_difference_percentages = {}\n",
+    "cost_microgrid = {}\n",
+    "cost_nuclear = {}\n",
     "for load in DC_LOADS:\n",
     "    n = networks[load]\n",
     "    print(f\"Data Centre Load: {load} MW\")\n",
@@ -983,7 +975,9 @@
     "        / cost_of_running_with_nuclear_ppa_per_year\n",
     "    ) * 100\n",
     "    print(f\"Percentage difference in costs: {cost_difference_percentage:.2f}%\\n\")\n",
-    "    cost_difference_percentages[load] = cost_difference_percentage"
+    "    cost_difference_percentages[load] = cost_difference_percentage\n",
+    "    cost_microgrid[load] = cost_of_running_microgrid_per_year\n",
+    "    cost_nuclear[load] = cost_of_running_with_nuclear_ppa_per_year"
    ]
   },
   {
@@ -1021,6 +1015,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99de69d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# Select the 100 MW scenario\n",
+    "load = 115\n",
+    "microgrid_cost = cost_microgrid[load]\n",
+    "nuclear_cost = cost_nuclear[load]\n",
+    "cost_diff_pct = cost_difference_percentages[load]\n",
+    "\n",
+    "# Bar chart data\n",
+    "scenarios = [\"<b>Scenario 1</b> <i>(Baseline)</i>:<br>Nuclear PPA\", \"<b>Scenario 2</b> <i>(Alternative)</i>:<br>Wind+BESS+Gas Backup Microgrid\"]\n",
+    "costs = [nuclear_cost, microgrid_cost]\n",
+    "colors = [\"#636EFA\", \"#00CC96\"]\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "# Add bars with black outlines\n",
+    "for i, (scenario, cost, color) in enumerate(zip(scenarios, costs, colors)):\n",
+    "    fig.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=[scenario],\n",
+    "            y=[cost],\n",
+    "            marker=dict(color=color, line=dict(color=\"black\", width=3)),\n",
+    "            name=scenario,\n",
+    "            showlegend=False,\n",
+    "            width=0.5,\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "# Add downward arrow and annotation if microgrid is cheaper\n",
+    "fig.add_annotation(\n",
+    "    x=scenarios[1],\n",
+    "    y=microgrid_cost,\n",
+    "    text=f\"{abs(cost_diff_pct):.1f}% lower\",\n",
+    "    showarrow=True,\n",
+    "    arrowhead=2,\n",
+    "    arrowsize=1.5,\n",
+    "    arrowwidth=2,\n",
+    "    arrowcolor=\"black\",\n",
+    "    ax=0,\n",
+    "    ay=-80,  # Negative value moves annotation above the bar\n",
+    "    font=dict(color=\"black\", size=16),\n",
+    "    bgcolor=\"white\",\n",
+    "    bordercolor=\"black\",\n",
+    "    borderwidth=2,\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title=f\"Annual Cost Comparison: Nuclear PPA vs Microgrid ({load} MW DC Load)\",\n",
+    "    yaxis_title=\"Annual Cost (£)\",\n",
+    "    xaxis_title=\"Scenario\",\n",
+    "    template=\"plotly_white\",\n",
+    "    bargap=0.5,\n",
+    "    yaxis=dict(tickformat=\",\"),\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a2f8e490",
    "metadata": {},
@@ -1041,6 +1100,18 @@
   {
    "cell_type": "markdown",
    "id": "6f3bb803",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed986c7a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e7be860",
    "metadata": {},
    "source": []
   }
