fix: data file names and loading

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -19,12 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3c09ce69",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
+    "from typing import Literal\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -341,13 +342,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "1fc1d405",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Literal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m REFERENCE_YEAR: \u001b[43mLiteral\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33m2019\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m2023\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[33m\"\u001b[39m\u001b[33m2023\u001b[39m\u001b[33m\"\u001b[39m  \u001b[38;5;66;03m# Reference year for the model, using most recent available\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Wind Data\u001b[39;00m\n\u001b[32m      3\u001b[39m wind_data = xr.load_dataset(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m../data/profile_39_offshorewind-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mREFERENCE_YEAR\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.nc\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'Literal' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "REFERENCE_YEAR: Literal[\"2019\", \"2023\"] = \"2023\"  # Reference year for the model, using most recent available\n",
     "# Wind Data\n",
-    "wind_data = xr.load_dataset(\"../data/profile_39_offwind-dc.nc\")\n",
+    "wind_data = xr.load_dataset(f\"../data/profile_39_offshorewind-{REFERENCE_YEAR}.nc\")\n",
     "wind_availability_df = wind_data[\"profile\"].to_dataframe().reset_index()\n",
     "wind_availability_pu = wind_availability_df[wind_availability_df[\"bus\"] == \"GB2 0\"][\"profile\"]\n",
     "wind_capacity_factor = 0.61  # Target capacity factor for the wind farm (Source: DESNZ, similar to actuals)\n",
@@ -355,13 +369,13 @@
     "wind_availability_pu = wind_availability_pu.clip(0, 1).to_numpy()\n",
     "\n",
     "\n",
-    "# # Solar Data \n",
-    "# solar_profile = xr.load_dataset('../data/profile_39_solar.nc')\n",
-    "# solar_availability_df = solar_profile['profile'].to_dataframe().reset_index()\n",
-    "# solar_availability_pu = solar_availability_df[solar_availability_df.bus == 'GB2 0'][\"profile\"]\n",
-    "# solar_capacity_factor = 0.11 # Target capacity factor for the solar (Source: DESNZ, similar to actuals)\n",
-    "# solar_availability_pu = solar_capacity_factor * (solar_availability_pu / solar_availability_pu.mean())\n",
-    "# solar_availability_pu = solar_availability_pu.clip(0, 1).to_numpy()\n"
+    "# Solar Data\n",
+    "solar_profile = xr.load_dataset(f\"../data/profile_39_solar-{REFERENCE_YEAR}.nc\")\n",
+    "solar_availability_df = solar_profile['profile'].to_dataframe().reset_index()\n",
+    "solar_availability_pu = solar_availability_df[solar_availability_df.bus == 'GB2 0'][\"profile\"]\n",
+    "solar_capacity_factor = 0.11 # Target capacity factor for the solar (Source: DESNZ, similar to actuals)\n",
+    "solar_availability_pu = solar_capacity_factor * (solar_availability_pu / solar_availability_pu.mean())\n",
+    "solar_availability_pu = solar_availability_pu.clip(0, 1).to_numpy()\n"
    ]
   },
   {
